// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render when isContextualSearchPending matches snapshot, renders LoadingBarContent 1`] = `
.c8 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

.c27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 1.0714285714285714em;
  height: 40px;
  line-height: 38px;
  font-size: 14px;
  background-color: #1f73b7;
  color: #fff;
}

.c27::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c27:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27:focus {
  outline: none;
}

.c27[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27:active,
.c27[aria-pressed='true'],
.c27[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27:hover {
  background-color: #144a75;
}

.c27[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c27:active {
  background-color: #0f3554;
}

.c27[aria-pressed='true'],
.c27[aria-pressed='mixed'] {
  background-color: #0f3554;
}

.c27:disabled {
  background-color: #cee2f2;
  color: #5293c7;
}

.c27:disabled {
  cursor: default;
}

.c27 .c7 {
  width: 16px;
  min-width: 16px;
  height: 16px;
}

.c29 .c27 {
  position: relative;
  margin-left: -1px;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c29 .c27:hover,
.c29 .c27:active {
  z-index: 1;
}

.c29 .c27:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c29 .c27:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-left-width: 0;
}

.c29 .c27:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-right-width: 0;
}

.c29 .c27:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 0.9166666666666666em;
  height: 32px;
  line-height: 30px;
  font-size: 12px;
  background-color: transparent;
  color: #1f73b7;
  border: none;
  padding: 0;
  width: 32px;
  color: #68737d;
}

.c6::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:focus {
  outline: none;
}

.c6[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  background-color: rgba(31,115,183,0.08);
  color: #144a75;
}

.c6[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  background-color: rgba(31,115,183,0.2);
  color: #0f3554;
}

.c6:disabled {
  border-color: transparent;
  background-color: #cee2f2;
  color: #5293c7;
}

.c6:disabled {
  cursor: default;
}

.c6 .c7 {
  width: 12px;
  min-width: 12px;
  height: 12px;
}

.c29 .c6 {
  position: relative;
  margin-left: -1px;
}

.c29 .c6:hover,
.c29 .c6:active {
  z-index: 1;
}

.c29 .c6:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c29 .c6:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c29 .c6:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c29 .c6:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6:hover {
  color: #49545c;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  color: #2f3941;
}

.c6 .c7 {
  width: 16px;
  height: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #17494D !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c9:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.c5 {
  width: 2rem;
  height: 2rem;
}

.c5 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c5 svg,
.c5 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c5:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c5:hover {
  background: #195055 !important;
}

.c18 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c18::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c18::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c18::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c22 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c24 {
  position: relative;
  display: inline-block;
}

.c24[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(25,80,85,0.2);
  border-radius: 4px;
  background-color: 0 0 0 3px rgba(25,80,85,0.2);
  padding: 0.2857142857142857rem;
  margin: -0.2857142857142857rem;
}

.c24 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c24 svg:hover path,
.c24 svg:active path,
.c24 svg:focus path {
  fill: #2f3941;
}

.c24 svg path {
  fill: #68737d;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c25 {
  position: relative !important;
}

.c26 {
  max-width: 14.285714285714286rem;
}

.c19 {
  text-align: center !important;
  color: #2f3941;
  font-size: 1.0714285714285714rem;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 {
  margin-bottom: 0 !important;
  margin-top: 1.4285714285714286 !important;
}

.c21 {
  color: #68737d;
  margin-bottom: 1.4285714285714286 !important;
}

.c12 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c15 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out, color 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out, color 0.25s ease-in-out;
  color: #68737d;
  margin: 1px 8px auto 0;
  width: 16px;
  height: 16px;
}

.c28 > .c14 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c13 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  border: 1px solid;
  border-radius: 4px;
  width: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  font-family: inherit;
  padding: 0.7142857142857143em 0.8571428571428571em;
  min-height: 40px;
  line-height: 1.2857142857142858;
  font-size: 14px;
  border-color: #1f73b7;
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
  background-color: #fff;
  color: #2f3941;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  cursor: text;
  overflow: hidden;
}

.c13::-ms-browse {
  border-radius: 2px;
}

.c13::-ms-clear,
.c13::-ms-reveal {
  display: none;
}

.c13::-moz-color-swatch {
  border: none;
  border-radius: 2px;
}

.c13::-webkit-color-swatch {
  border: none;
  border-radius: 2px;
}

.c13::-webkit-color-swatch-wrapper {
  padding: 0;
}

.c13::-webkit-clear-button,
.c13::-webkit-inner-spin-button,
.c13::-webkit-search-cancel-button,
.c13::-webkit-search-results-button {
  display: none;
}

.c13::-webkit-datetime-edit {
  line-height: 1;
}

.c13::-webkit-input-placeholder {
  opacity: 1;
}

.c13::-moz-placeholder {
  opacity: 1;
}

.c13:-ms-input-placeholder {
  opacity: 1;
}

.c13::placeholder {
  opacity: 1;
}

.c13:invalid {
  box-shadow: none;
}

.c13[type='file']::-ms-value {
  display: none;
}

.c13::-ms-browse {
  font-size: 12px;
}

.c13[type='date'],
.c13[type='datetime-local'],
.c13[type='file'],
.c13[type='month'],
.c13[type='time'],
.c13[type='week'] {
  max-height: 40px;
}

.c13[type='file'] {
  line-height: 1;
}

.c13::-moz-color-swatch {
  margin-top: -5px;
  margin-left: -7px;
  width: calc(100% + 14px);
  height: 28px;
}

.c13::-webkit-color-swatch {
  margin: -5px -7px;
}

.c30 + .c13,
.sc-chPdSV + .c13,
.sc-kpOJdX + .c13,
.c13 + .sc-chPdSV,
.c13 + .sc-kpOJdX {
  margin-top: 8px;
}

.c13:focus {
  outline: none;
}

.c13::-webkit-input-placeholder {
  color: #c2c8cc;
}

.c13::-moz-placeholder {
  color: #c2c8cc;
}

.c13:-ms-input-placeholder {
  color: #c2c8cc;
}

.c13::placeholder {
  color: #c2c8cc;
}

.c13:hover {
  border-color: #5293c7;
}

.c13:focus,
.c13[data-garden-focus-visible='true'] {
  border-color: #1f73b7;
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c13:disabled,
.c13[aria-disabled='true'] {
  border-color: #e9ebed;
  background-color: #f8f9f9;
  color: #c2c8cc;
}

.c13:disabled {
  cursor: default;
}

.c13 > .c14 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c17 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  border: none;
  border-radius: 0;
  width: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  font-family: inherit;
  padding: 0;
  min-height: 1em;
  line-height: 1.2857142857142858;
  font-size: 14px;
  border-color: #d8dcde;
  background-color: transparent;
  color: #2f3941;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c17::-ms-browse {
  border-radius: 2px;
}

.c17::-ms-clear,
.c17::-ms-reveal {
  display: none;
}

.c17::-moz-color-swatch {
  border: none;
  border-radius: 2px;
}

.c17::-webkit-color-swatch {
  border: none;
  border-radius: 2px;
}

.c17::-webkit-color-swatch-wrapper {
  padding: 0;
}

.c17::-webkit-clear-button,
.c17::-webkit-inner-spin-button,
.c17::-webkit-search-cancel-button,
.c17::-webkit-search-results-button {
  display: none;
}

.c17::-webkit-datetime-edit {
  line-height: 1;
}

.c17::-webkit-input-placeholder {
  opacity: 1;
}

.c17::-moz-placeholder {
  opacity: 1;
}

.c17:-ms-input-placeholder {
  opacity: 1;
}

.c17::placeholder {
  opacity: 1;
}

.c17:invalid {
  box-shadow: none;
}

.c17[type='file']::-ms-value {
  display: none;
}

.c17::-ms-browse {
  font-size: 12px;
}

.c17[type='date'],
.c17[type='datetime-local'],
.c17[type='file'],
.c17[type='month'],
.c17[type='time'],
.c17[type='week'] {
  max-height: 40px;
}

.c17[type='file'] {
  line-height: 1;
}

.c17::-moz-color-swatch {
  margin-top: -5px;
  margin-left: -7px;
  width: calc(100% + 14px);
  height: 28px;
}

.c17::-webkit-color-swatch {
  margin: -5px -7px;
}

.c30 + .c17,
.sc-chPdSV + .c17,
.sc-kpOJdX + .c17,
.c17 + .sc-chPdSV,
.c17 + .sc-kpOJdX {
  margin-top: 8px;
}

.c17:focus {
  outline: none;
}

.c17::-webkit-input-placeholder {
  color: #c2c8cc;
}

.c17::-moz-placeholder {
  color: #c2c8cc;
}

.c17:-ms-input-placeholder {
  color: #c2c8cc;
}

.c17::placeholder {
  color: #c2c8cc;
}

.c17:hover {
  border-color: #5293c7;
}

.c17:focus,
.c17[data-garden-focus-visible='true'] {
  border-color: #1f73b7;
}

.c17:disabled,
.c17[aria-disabled='true'] {
  border-color: #e9ebed;
  color: #c2c8cc;
}

.c17:disabled {
  cursor: default;
}

.c16 {
  color: #c2c8cc !important;
}

.c11 {
  margin-bottom: 0;
}

.c10 {
  padding: 0 0.7142857142857143rem 0.35714285714285715rem;
}

@media screen and (min--moz-device-pixel-ratio:0) {
  .c13[type='number'] {
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

@supports (-ms-ime-align:auto) {
  .c13[type='color'] {
    padding: 1px 3px;
  }
}

@media screen and (min--moz-device-pixel-ratio:0) {
  .c17[type='number'] {
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

@supports (-ms-ime-align:auto) {
  .c17[type='color'] {
    padding: 1px 3px;
  }
}

<div>
  <div>
    <div
      class="c0"
    >
      <header
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
            id="widgetHeaderTitle"
          >
            pageTitle
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 c6"
            data-garden-id="buttons.icon_button"
            data-garden-version="8.13.0"
            type="button"
          >
            <svg
              class="c7 c8"
              data-garden-id="buttons.icon"
              data-garden-version="8.13.0"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
              theme="[object Object]"
            />
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
            data-testid="page-header-container"
          >
            <form
              class="c11"
              novalidate=""
            >
              <div
                class="c12"
                data-garden-id="forms.field"
                data-garden-version="8.20.0"
              >
                <div
                  aria-invalid="false"
                  class="c13"
                  data-garden-id="forms.faux_input"
                  data-garden-version="8.20.0"
                >
                  <svg
                    aria-hidden="true"
                    class="c14 c15 c16"
                    data-garden-id="forms.media_figure"
                    data-garden-version="8.20.0"
                    data-testid="Icon--search"
                    focusable="false"
                    realfilename="search-stroke.svg"
                    role="presentation"
                  />
                  <input
                    aria-describedby="2val-field_1.3.4--hint"
                    aria-invalid="false"
                    aria-labelledby="2val-field_1.3.4--label"
                    autocapitalize="off"
                    class="c17"
                    data-garden-id="forms.media_input"
                    data-garden-version="8.20.0"
                    data-testid="search-field"
                    id="2val-field_1.3.4--input"
                    placeholder="How can we help?"
                    type="search"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
      </header>
      <main
        aria-live="polite"
        class="c18"
        data-testid="scroll-container-content"
      >
        <div
          class="c19"
        >
          <p
            class="c20"
          >
            There are no results for ""
          </p>
          <p
            class="c21"
          >
            Try searching for something else.
          </p>
        </div>
      </main>
      <footer
        class="c22"
      >
        <div
          class="c23"
        >
          <a
            class="c24"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <div
            class="c25"
          >
            <div
              class="container buttonRight "
            >
              <button
                class="c26 c27"
                data-garden-id="buttons.button"
                data-garden-version="8.13.0"
                type="button"
              >
                Leave us a message
              </button>
            </div>
          </div>
        </div>
      </footer>
      <div>
        NotificationPopup
      </div>
    </div>
  </div>
</div>
`;

exports[`render when not isContextualSearchPending matches snapshot, renders NoResults 1`] = `
.c8 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out;
}

.c27 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 1.0714285714285714em;
  height: 40px;
  line-height: 38px;
  font-size: 14px;
  background-color: #1f73b7;
  color: #fff;
}

.c27::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c27:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27:focus {
  outline: none;
}

.c27[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27:active,
.c27[aria-pressed='true'],
.c27[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c27:hover {
  background-color: #144a75;
}

.c27[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c27:active {
  background-color: #0f3554;
}

.c27[aria-pressed='true'],
.c27[aria-pressed='mixed'] {
  background-color: #0f3554;
}

.c27:disabled {
  background-color: #cee2f2;
  color: #5293c7;
}

.c27:disabled {
  cursor: default;
}

.c27 .c7 {
  width: 16px;
  min-width: 16px;
  height: 16px;
}

.c29 .c27 {
  position: relative;
  margin-left: -1px;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c29 .c27:hover,
.c29 .c27:active {
  z-index: 1;
}

.c29 .c27:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c29 .c27:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-left-width: 0;
}

.c29 .c27:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border-right-width: 0;
}

.c29 .c27:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: border-color 0.25s ease-in-out, box-shadow 0.1s ease-in-out, background-color 0.25s ease-in-out, color 0.25s ease-in-out;
  margin: 0;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-family: inherit;
  font-weight: 400;
  -webkit-font-smoothing: subpixel-antialiased;
  box-sizing: border-box;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-touch-callout: none;
  padding: 0 0.9166666666666666em;
  height: 32px;
  line-height: 30px;
  font-size: 12px;
  background-color: transparent;
  color: #1f73b7;
  border: none;
  padding: 0;
  width: 32px;
  color: #68737d;
}

.c6::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.c6:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:focus {
  outline: none;
}

.c6[data-garden-focus-visible] {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  -webkit-transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  transition: border-color 0.1s ease-in-out, background-color 0.1s ease-in-out, color 0.1s ease-in-out;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  background-color: rgba(31,115,183,0.08);
  color: #144a75;
}

.c6[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  background-color: rgba(31,115,183,0.2);
  color: #0f3554;
}

.c6:disabled {
  border-color: transparent;
  background-color: #cee2f2;
  color: #5293c7;
}

.c6:disabled {
  cursor: default;
}

.c6 .c7 {
  width: 12px;
  min-width: 12px;
  height: 12px;
}

.c29 .c6 {
  position: relative;
  margin-left: -1px;
}

.c29 .c6:hover,
.c29 .c6:active {
  z-index: 1;
}

.c29 .c6:disabled {
  z-index: -1;
  border-top-width: 0;
  border-bottom-width: 0;
  border-right-color: #fff;
  border-left-color: #fff;
}

.c29 .c6:first-of-type:not(:last-of-type) {
  margin-left: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c29 .c6:last-of-type:not(:first-of-type) {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c29 .c6:not(:first-of-type):not(:last-of-type) {
  border-radius: 0;
}

.c6:hover {
  color: #49545c;
}

.c6:active,
.c6[aria-pressed='true'],
.c6[aria-pressed='mixed'] {
  color: #2f3941;
}

.c6 .c7 {
  width: 16px;
  height: 16px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  color: #2f3941;
  height: 100%;
  width: 100%;
  max-width: 100vw;
  position: relative;
  overflow: hidden;
  background-color: #fff;
  box-shadow: 0 0 0.42857142857142855rem 0 rgba(0,0,0,0.2);
  border-radius: 0.5714285714285714rem;
}

.c1 {
  padding: 0.5714285714285714rem 1rem;
  background: #17494D !important;
  color: #FFFFFF !important;
}

.c4 {
  font-weight: 700;
  text-align: center;
  -webkit-letter-spacing: 0.02142857142857143rem;
  -moz-letter-spacing: 0.02142857142857143rem;
  -ms-letter-spacing: 0.02142857142857143rem;
  letter-spacing: 0.02142857142857143rem;
  line-height: 1.5;
  font-size: 1.0714285714285714rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 2px;
}

.c9:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 2rem;
}

.c2:not(:first-child) {
  margin-top: 0.2857142857142857rem;
}

.c2 .c3:first-child {
  margin-left: 4rem;
}

.c2 .c3:nth-child(2) {
  margin-left: 2rem;
}

.c2 .c3:last-child {
  margin-right: 4rem;
}

.c2 .c3:nth-last-child(2) {
  margin-right: 2rem;
}

.c5 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5.c5 {
  width: 2rem;
  height: 2rem;
}

.c5 svg {
  width: 1rem !important;
  height: 1rem !important;
}

.c5 svg,
.c5 path {
  fill: #FFFFFF !important;
  color: #FFFFFF !important;
}

.c5:focus {
  outline: none !important;
  box-shadow: 0 0 0 0.21428571428571427rem rgba(255,255,255,0.4) !important;
}

.c5:hover {
  background: #195055 !important;
}

.c18 {
  -webkit-box-flex: 2;
  -webkit-flex-grow: 2;
  -ms-flex-positive: 2;
  flex-grow: 2;
  padding-top: 1.0714285714285714rem;
  padding-left: 0.7142857142857143rem;
  padding-right: 1.0714285714285714rem;
  margin-left: 0.7142857142857143rem;
  margin-right: 0.35714285714285715rem;
  overflow-y: auto;
  overflow-x: hidden;
  height: 100%;
}

.c18::-webkit-scrollbar-track {
  margin: 1.0714285714285714 0;
}

.c18::-webkit-scrollbar {
  box-shadow: none;
  width: 0.42857142857142855rem;
}

.c18::-webkit-scrollbar-thumb {
  background: #d8dcde;
  border-radius: 0.21428571428571427rem;
}

.c22 {
  padding: 1.0714285714285714rem 1.4285714285714286rem;
  border-top: 0.07857142857142858rem solid #e9ebed;
  box-shadow: 0 -0.07142857142857142rem 0.8571428571428571rem rgba(0,0,0,0.08);
}

.c24 {
  position: relative;
  display: inline-block;
}

.c24[data-garden-focus-visible] {
  box-shadow: 0 0 0 3px rgba(25,80,85,0.2);
  border-radius: 4px;
  background-color: 0 0 0 3px rgba(25,80,85,0.2);
  padding: 0.2857142857142857rem;
  margin: -0.2857142857142857rem;
}

.c24 svg {
  min-width: 3.5714285714285716rem;
  width: 3.5714285714285716rem;
  height: 0.7142857142857143rem;
}

.c24 svg:hover path,
.c24 svg:active path,
.c24 svg:focus path {
  fill: #2f3941;
}

.c24 svg path {
  fill: #68737d;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c25 {
  position: relative !important;
}

.c26 {
  max-width: 14.285714285714286rem;
}

.c19 {
  text-align: center !important;
  color: #2f3941;
  font-size: 1.0714285714285714rem;
  height: 80%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c20 {
  margin-bottom: 0 !important;
  margin-top: 1.4285714285714286 !important;
}

.c21 {
  color: #68737d;
  margin-bottom: 1.4285714285714286 !important;
}

.c12 {
  margin: 0;
  border: 0;
  padding: 0;
}

.c15 {
  -webkit-transition: -webkit-transform 0.25s ease-in-out, color 0.25s ease-in-out;
  -webkit-transition: transform 0.25s ease-in-out, color 0.25s ease-in-out;
  transition: transform 0.25s ease-in-out, color 0.25s ease-in-out;
  color: #68737d;
  margin: 1px 8px auto 0;
  width: 16px;
  height: 16px;
}

.c28 > .c14 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c13 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  border: 1px solid;
  border-radius: 4px;
  width: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  font-family: inherit;
  padding: 0.7142857142857143em 0.8571428571428571em;
  min-height: 40px;
  line-height: 1.2857142857142858;
  font-size: 14px;
  border-color: #1f73b7;
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
  background-color: #fff;
  color: #2f3941;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  cursor: text;
  overflow: hidden;
}

.c13::-ms-browse {
  border-radius: 2px;
}

.c13::-ms-clear,
.c13::-ms-reveal {
  display: none;
}

.c13::-moz-color-swatch {
  border: none;
  border-radius: 2px;
}

.c13::-webkit-color-swatch {
  border: none;
  border-radius: 2px;
}

.c13::-webkit-color-swatch-wrapper {
  padding: 0;
}

.c13::-webkit-clear-button,
.c13::-webkit-inner-spin-button,
.c13::-webkit-search-cancel-button,
.c13::-webkit-search-results-button {
  display: none;
}

.c13::-webkit-datetime-edit {
  line-height: 1;
}

.c13::-webkit-input-placeholder {
  opacity: 1;
}

.c13::-moz-placeholder {
  opacity: 1;
}

.c13:-ms-input-placeholder {
  opacity: 1;
}

.c13::placeholder {
  opacity: 1;
}

.c13:invalid {
  box-shadow: none;
}

.c13[type='file']::-ms-value {
  display: none;
}

.c13::-ms-browse {
  font-size: 12px;
}

.c13[type='date'],
.c13[type='datetime-local'],
.c13[type='file'],
.c13[type='month'],
.c13[type='time'],
.c13[type='week'] {
  max-height: 40px;
}

.c13[type='file'] {
  line-height: 1;
}

.c13::-moz-color-swatch {
  margin-top: -5px;
  margin-left: -7px;
  width: calc(100% + 14px);
  height: 28px;
}

.c13::-webkit-color-swatch {
  margin: -5px -7px;
}

.c30 + .c13,
.sc-chPdSV + .c13,
.sc-kpOJdX + .c13,
.c13 + .sc-chPdSV,
.c13 + .sc-kpOJdX {
  margin-top: 8px;
}

.c13:focus {
  outline: none;
}

.c13::-webkit-input-placeholder {
  color: #c2c8cc;
}

.c13::-moz-placeholder {
  color: #c2c8cc;
}

.c13:-ms-input-placeholder {
  color: #c2c8cc;
}

.c13::placeholder {
  color: #c2c8cc;
}

.c13:hover {
  border-color: #5293c7;
}

.c13:focus,
.c13[data-garden-focus-visible='true'] {
  border-color: #1f73b7;
  box-shadow: 0 0 0 3px rgba(31,115,183,0.35);
}

.c13:disabled,
.c13[aria-disabled='true'] {
  border-color: #e9ebed;
  background-color: #f8f9f9;
  color: #c2c8cc;
}

.c13:disabled {
  cursor: default;
}

.c13 > .c14 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c17 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  transition: border-color .25s ease-in-out, box-shadow .1s ease-in-out, background-color .25s ease-in-out, color .25s ease-in-out;
  border: none;
  border-radius: 0;
  width: 100%;
  box-sizing: border-box;
  vertical-align: middle;
  font-family: inherit;
  padding: 0;
  min-height: 1em;
  line-height: 1.2857142857142858;
  font-size: 14px;
  border-color: #d8dcde;
  background-color: transparent;
  color: #2f3941;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c17::-ms-browse {
  border-radius: 2px;
}

.c17::-ms-clear,
.c17::-ms-reveal {
  display: none;
}

.c17::-moz-color-swatch {
  border: none;
  border-radius: 2px;
}

.c17::-webkit-color-swatch {
  border: none;
  border-radius: 2px;
}

.c17::-webkit-color-swatch-wrapper {
  padding: 0;
}

.c17::-webkit-clear-button,
.c17::-webkit-inner-spin-button,
.c17::-webkit-search-cancel-button,
.c17::-webkit-search-results-button {
  display: none;
}

.c17::-webkit-datetime-edit {
  line-height: 1;
}

.c17::-webkit-input-placeholder {
  opacity: 1;
}

.c17::-moz-placeholder {
  opacity: 1;
}

.c17:-ms-input-placeholder {
  opacity: 1;
}

.c17::placeholder {
  opacity: 1;
}

.c17:invalid {
  box-shadow: none;
}

.c17[type='file']::-ms-value {
  display: none;
}

.c17::-ms-browse {
  font-size: 12px;
}

.c17[type='date'],
.c17[type='datetime-local'],
.c17[type='file'],
.c17[type='month'],
.c17[type='time'],
.c17[type='week'] {
  max-height: 40px;
}

.c17[type='file'] {
  line-height: 1;
}

.c17::-moz-color-swatch {
  margin-top: -5px;
  margin-left: -7px;
  width: calc(100% + 14px);
  height: 28px;
}

.c17::-webkit-color-swatch {
  margin: -5px -7px;
}

.c30 + .c17,
.sc-chPdSV + .c17,
.sc-kpOJdX + .c17,
.c17 + .sc-chPdSV,
.c17 + .sc-kpOJdX {
  margin-top: 8px;
}

.c17:focus {
  outline: none;
}

.c17::-webkit-input-placeholder {
  color: #c2c8cc;
}

.c17::-moz-placeholder {
  color: #c2c8cc;
}

.c17:-ms-input-placeholder {
  color: #c2c8cc;
}

.c17::placeholder {
  color: #c2c8cc;
}

.c17:hover {
  border-color: #5293c7;
}

.c17:focus,
.c17[data-garden-focus-visible='true'] {
  border-color: #1f73b7;
}

.c17:disabled,
.c17[aria-disabled='true'] {
  border-color: #e9ebed;
  color: #c2c8cc;
}

.c17:disabled {
  cursor: default;
}

.c16 {
  color: #c2c8cc !important;
}

.c11 {
  margin-bottom: 0;
}

.c10 {
  padding: 0 0.7142857142857143rem 0.35714285714285715rem;
}

@media screen and (min--moz-device-pixel-ratio:0) {
  .c13[type='number'] {
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

@supports (-ms-ime-align:auto) {
  .c13[type='color'] {
    padding: 1px 3px;
  }
}

@media screen and (min--moz-device-pixel-ratio:0) {
  .c17[type='number'] {
    -webkit-appearance: textfield;
    -moz-appearance: textfield;
    appearance: textfield;
  }
}

@supports (-ms-ime-align:auto) {
  .c17[type='color'] {
    padding: 1px 3px;
  }
}

<div>
  <div>
    <div
      class="c0"
    >
      <header
        class="c1"
        data-testid="widget-header-view"
      >
        <div
          class="c2"
        >
          <h1
            class="c3 c4"
            data-testid="widget-title"
            id="widgetHeaderTitle"
          >
            pageTitle
          </h1>
          <button
            aria-label="Minimize widget"
            class="c5 c6"
            data-garden-id="buttons.icon_button"
            data-garden-version="8.13.0"
            type="button"
          >
            <svg
              class="c7 c8"
              data-garden-id="buttons.icon"
              data-garden-version="8.13.0"
              data-testid="Icon--dash"
              realfilename="dash-fill.svg"
              theme="[object Object]"
            />
          </button>
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
            data-testid="page-header-container"
          >
            <form
              class="c11"
              novalidate=""
            >
              <div
                class="c12"
                data-garden-id="forms.field"
                data-garden-version="8.20.0"
              >
                <div
                  aria-invalid="false"
                  class="c13"
                  data-garden-id="forms.faux_input"
                  data-garden-version="8.20.0"
                >
                  <svg
                    aria-hidden="true"
                    class="c14 c15 c16"
                    data-garden-id="forms.media_figure"
                    data-garden-version="8.20.0"
                    data-testid="Icon--search"
                    focusable="false"
                    realfilename="search-stroke.svg"
                    role="presentation"
                  />
                  <input
                    aria-describedby="1val-field_1.3.4--hint"
                    aria-invalid="false"
                    aria-labelledby="1val-field_1.3.4--label"
                    autocapitalize="off"
                    class="c17"
                    data-garden-id="forms.media_input"
                    data-garden-version="8.20.0"
                    data-testid="search-field"
                    id="1val-field_1.3.4--input"
                    placeholder="How can we help?"
                    type="search"
                    value=""
                  />
                </div>
              </div>
            </form>
          </div>
        </div>
      </header>
      <main
        aria-live="polite"
        class="c18"
        data-testid="scroll-container-content"
      >
        <div
          class="c19"
        >
          <p
            class="c20"
          >
            There are no results for ""
          </p>
          <p
            class="c21"
          >
            Try searching for something else.
          </p>
        </div>
      </main>
      <footer
        class="c22"
      >
        <div
          class="c23"
        >
          <a
            class="c24"
            data-testid="Icon--zendesk"
            href="https://www.zendesk.com/embeddables/?utm_source=webwidget&utm_medium=poweredbyzendesk&utm_campaign=image"
            target="_blank"
          >
            <svg
              realfilename="widget-icon_zendesk.svg"
              title="zendesk"
            />
          </a>
          <div
            class="c25"
          >
            <div
              class="container buttonRight "
            >
              <button
                class="c26 c27"
                data-garden-id="buttons.button"
                data-garden-version="8.13.0"
                type="button"
              >
                Leave us a message
              </button>
            </div>
          </div>
        </div>
      </footer>
      <div>
        NotificationPopup
      </div>
    </div>
  </div>
</div>
`;
